Closed Bug 307616 Opened 20 years ago Closed 20 years ago

<input type="image"> with missing image gives "ASSERTION: Form control has a frame, but it's not a form frame"

Categories

(Core :: Layout: Form Controls, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: jruderman, Assigned: martijn.martijn)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Steps to reproduce: 1. Load testcase in a debug build. Result: ###!!! ASSERTION: Form control has a frame, but it's not a form frame: 'Error', file /Users/admin/trunk/mozilla/content/html/content/src/nsGenericHTMLElement.cpp, line 2286
Attached file testcase
This assert is bogus and should just go away...
Attached patch patchSplinter Review
Like this?
Attachment #207080 - Flags: review?(bzbarsky)
Attachment #207080 - Flags: superreview+
Attachment #207080 - Flags: review?(bzbarsky)
Attachment #207080 - Flags: review+
Assignee: nobody → martijn.martijn
mozilla/content/html/content/src/nsGenericHTMLElement.cpp; new revision: 1.633;
Status: NEW → RESOLVED
Closed: 20 years ago
OS: MacOS X → All
Hardware: Macintosh → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
Crashtest checked in.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: