Bug 307616: <input type="image"> with missing image gives "ASSERTION: Form control has a frame, but it's not a form frame", remove bogus assertion, patch by Martijn Wargers <martijn.martijn@gmail.com>, r+sr=bzbarsky